@@ -1,67 +1,65 @@
 package pl.kwidz.ecommerce.customer;
 
+import pl.kwidz.ecommerce.exception.CustomerNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang.StringUtils;
 import org.springframework.stereotype.Service;
-import pl.kwidz.ecommerce.exception.CustomerNotFoundException;
 
 import java.util.List;
-
-import static java.lang.String.format;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CustomerService {
 
-    private final CustomerRepository repository;
-    private final CustomerMapper mapper;
+  private final CustomerRepository repository;
+  private final CustomerMapper mapper;
 
-    public String createCustomer(CustomerRequest request) {
-        var customer = repository.save(mapper.toCustomer(request));
-        return customer.getId();
+  public String createCustomer(CustomerRequest request) {
+    var customer = this.repository.save(mapper.toCustomer(request));
+    return customer.getId();
+  }
+
+  public void updateCustomer(CustomerRequest request) {
+    var customer = this.repository.findById(request.id())
+        .orElseThrow(() -> new CustomerNotFoundException(
+            String.format("Cannot update customer:: No customer found with the provided ID: %s", request.id())
+        ));
+    mergeCustomer(customer, request);
+    this.repository.save(customer);
+  }
+
+  private void mergeCustomer(Customer customer, CustomerRequest request) {
+    if (StringUtils.isNotBlank(request.firstname())) {
+      customer.setFirstname(request.firstname());
     }
-
-
-    public void updateCustomer(CustomerRequest request) {
-        var customer = repository.findById(request.id()).orElseThrow(() -> new CustomerNotFoundException(
-                format("Cannot update customer. No Customer found with id: %s", request.id())));
-        mergeCustomer(customer, request);
-        repository.save(customer);
+    if (StringUtils.isNotBlank(request.email())) {
+      customer.setEmail(request.email());
     }
-
-    private void mergeCustomer(Customer customer, CustomerRequest request) {
-        if (StringUtils.isNotBlank(request.firstname())) {
-            customer.setFirstname(request.firstname());
-        }
-        if (StringUtils.isNotBlank(request.lastname())) {
-            customer.setFirstname(request.lastname());
-        }
-        if (StringUtils.isNotBlank(request.email())) {
-            customer.setFirstname(request.email());
-        }
-        if (request.address() != null) {
-            customer.setAddress(request.address());
-        }
+    if (request.address() != null) {
+      customer.setAddress(request.address());
     }
+  }
 
-    public List<CustomerResponse> findAllCustomers() {
-        return repository.findAll().stream()
-                .map(mapper::fromCustomer)
-                .toList();
-    }
+  public List<CustomerResponse> findAllCustomers() {
+    return  this.repository.findAll()
+        .stream()
+        .map(this.mapper::fromCustomer)
+        .collect(Collectors.toList());
+  }
 
-    public Boolean existsById(String id) {
-        return repository.findById(id).isPresent();
-    }
+  public CustomerResponse findById(String id) {
+    return this.repository.findById(id)
+        .map(mapper::fromCustomer)
+        .orElseThrow(() -> new CustomerNotFoundException(String.format("No customer found with the provided ID: %s", id)));
+  }
 
+  public boolean existsById(String id) {
+    return this.repository.findById(id)
+        .isPresent();
+  }
 
-    public CustomerResponse findById(String id) {
-        return repository.findById(id)
-                .map(mapper::fromCustomer)
-                .orElseThrow(() -> new CustomerNotFoundException(format("No customer found with the provided ID: %s", id)));
-    }
-
-    public void deleteCustomer(String id) {
-        repository.deleteById(id);
-    }
+  public void deleteCustomer(String id) {
+    this.repository.deleteById(id);
+  }
 }
